update to sub directory

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "node/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install --prefix /node && node /node/index.js"
+    "postinstall": "cd node && npm install && node index.js"
+  },
+  "dependencies": {
+    "postinstall": "*"
   },
   "repository": {
     "type": "git",
